chore: update workflows config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
 
       - run: npm install
       - run: npm run build
+      - run: mkdir -p build
 
       - name: Converts Markdown to HTML
         uses: jaywcjlove/markdown-to-html-cli@main
