chore: add keywords field in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
   "name": "github-action-package",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Read and modify the contents of package.json.",
   "scripts": {
     "prepare": "husky install && npm run build",
@@ -19,6 +19,14 @@
       "npm run build"
     ]
   },
+  "keywords": [
+    "actions",
+    "package",
+    "package.json",
+    "json",
+    "node",
+    "setup"
+  ],
   "dependencies": {
     "@actions/core": "^1.9.0"
   },
