--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,10 @@ inputs:
     default: package.json
     required: false
 
+  data:
+    description: json data for changing "package.json".
+    required: false
+
 outputs:
   name:
     description: 'name field in package.json, The name of the package.'
