chore: update workflows config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,13 +66,13 @@ jobs:
               "name": "@jaywcjlove/github-action-package-test"
             }
 
-      - run: echo "name - ${{ steps.info.outputs.name }}"
-      - run: echo "version - ${{ steps.info.outputs.version }}"
-      - run: echo "description - ${{ steps.info.outputs.description }}"
-      - run: echo "author - ${{ steps.info.outputs.author }}"
-      - run: echo "homepage - ${{ steps.info.outputs.homepage }}"
-      - run: echo "license - ${{ steps.info.outputs.license }}"
-      - run: echo "keywords - ${{ steps.info.outputs.keywords }}"
-      - run: echo "repository - ${{ steps.info.outputs.repository }}"
-      - run: echo "os - ${{ steps.info.outputs.os }}"
-      - run: echo "cpu - ${{ steps.info.outputs.cpu }}"
+      - run: echo "name - ${{ steps.info2.outputs.name }}"
+      - run: echo "version - ${{ steps.info2.outputs.version }}"
+      - run: echo "description - ${{ steps.info2.outputs.description }}"
+      - run: echo "author - ${{ steps.info2.outputs.author }}"
+      - run: echo "homepage - ${{ steps.info2.outputs.homepage }}"
+      - run: echo "license - ${{ steps.info2.outputs.license }}"
+      - run: echo "keywords - ${{ steps.info2.outputs.keywords }}"
+      - run: echo "repository - ${{ steps.info2.outputs.repository }}"
+      - run: echo "os - ${{ steps.info2.outputs.os }}"
+      - run: echo "cpu - ${{ steps.info2.outputs.cpu }}"
