--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         id: create_tag
         uses: jaywcjlove/create-tag-action@v1.3.7
         with:
-          package-path: ./core/package.json
+          package-path: ./package.json
       
       - name: get tag version
         id: tag_version
