fix: fix isObject is not a function issue.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   ],
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "unset-value": "^2.0.1"
+    "has-value": "^2.0.2",
+    "isobject": "^4.0.0"
   },
   "devDependencies": {
     "@kkt/ncc": "~1.0.12",
