--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.3.2",
   "description": "Read and modify the contents of package.json.",
   "scripts": {
-    "prepare": "husky install && npm run build",
+    "prepare": "husky",
     "build": "ncc build src/index.ts -o lib",
     "watch": "ncc watch src/index.ts -o lib"
   },
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@kkt/ncc": "~1.1.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "lint-staged": "^13.1.2"
   }
 }
