--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "node",
     "setup"
   ],
+  "engines": {
+    "node": ">=v20.11.0",
+    "npm": ">=10.2.4"
+  },
   "dependencies": {
     "@actions/core": "^1.10.0",
     "has-value": "^2.0.2",
